--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-size: 16px;
   overflow-x: hidden;
 }
@@ -46,7 +46,7 @@ section {
 }
 
 footer {
-  padding: 1.5rem 1rem;
+  padding: 0 1rem 1.5rem 1rem;
 }
 
 .form-group {
@@ -90,7 +90,7 @@ a.btn,
 }
 
 .list-group {
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   list-style: none;
 }
 
@@ -114,7 +114,7 @@ a.btn,
   display: block;
   margin-bottom: 0.25rem;
   color: #007bff;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .text-center {
