--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,24 @@ header h1 {
   font-size: 1.1rem;
 }
 
+#share-btn {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  -webkit-appearance: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+#share-btn:focus,
+#share-btn:active {
+  outline: none;
+}
+
 section {
   margin-top: 50px;
   padding: 1.5rem 1rem;
