--- a/styles/main.css
+++ b/styles/main.css
@@ -78,54 +78,72 @@ footer {
   border-radius: 50rem;
   font-size: 0.9rem;
   -webkit-appearance: none;
-  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .form-control:focus {
   outline: 0;
   border: 1px solid #80bdff;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
-a.btn,
-.btn {
+.send-btn {
   background-color: #007bff;
   color: #ffffff;
-  padding: 1rem 2.5rem;
+  padding: 0.9rem 1rem 0.9rem 1.25rem;
   border: 1px solid #007bff;
   border-radius: 50rem;
   cursor: pointer;
   text-decoration: none;
   -webkit-appearance: none;
   font-size: 0.9rem;
-  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.btn:focus {
+.send-btn:focus {
   outline: 0;
   border-color: #0062cc;
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, .5);
+  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+}
+
+.send-btn * {
+  vertical-align: middle;
+}
+
+.send-btn span {
+  margin-right: 1.2rem;
 }
 
 .list-group {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   list-style: none;
 }
 
-.list-group li {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #dee2e6;
+.list-group li img {
+  width: 40px;
+  min-width: 40px;
+  margin-right: 0.5rem;
 }
 
 .list-group li label {
-  display: block;
-  width: 100%;
-  padding: 1rem 0;
+  display: flex;
+  align-items: flex-start;
+  padding: 1rem 0.5rem;
+  border: 1px solid transparent;
+  font-size: 0.95rem;
+  cursor: pointer;
 }
 
 .list-group li input {
   margin-right: 1rem;
+  display: none;
+}
+
+.list-group li input[type=radio]:checked+label {
+  background-color: rgba(0, 123, 255, 0.15);
+  border-radius: 0.25rem;
+  border-color: #a8d2ff;
+  box-shadow: 0 0 0.5rem rgba(38, 143, 255, 0.2);
 }
 
 .list-group .label-title {
