--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,35 @@
+:root {
+  --bg-color: #ffffff;
+  --txt-color: #000000;
+  --header-color: #ffffff;
+  --input-color: #ffffff;
+  --input-border-color: #dee2e6;
+  --icons-color: #333333;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #181818;
+    --txt-color: #f3f3f3;
+    --header-color: #181818;
+    --input-color: #353535;
+    --input-border-color: #181818;
+    --icons-color: #ffffff;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html,
 body {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-size: 16px;
   overflow-x: hidden;
+  color: var(--txt-color);
+  background-color: var(--bg-color);
 }
 
 small {
@@ -36,6 +57,7 @@ header {
   width: 100%;
   height: 50px;
   background-color: #ffffff;
+  background-color: var(--header-color);
   text-align: center;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
@@ -57,6 +79,10 @@ header h1 {
   cursor: pointer;
 }
 
+#share-btn svg .fill {
+  fill: var(--txt-color);
+}
+
 #share-btn:focus,
 #share-btn:active {
   outline: none;
@@ -72,29 +98,44 @@ footer {
 }
 
 .form-group {
+  position: relative;
   margin-bottom: 0.5rem;
+}
+
+.form-group svg {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  width: 20px;
+  height: 20px;
+}
+
+.form-group svg .fill {
+  fill: var(--txt-color);
 }
 
 .form-control {
   width: 100%;
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--input-border-color);
   padding: 0.6rem 0.6rem 0.6rem 2rem;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-position: 8px center;
-  background-size: 20px;
+  background-size: 20px; */
+  background-color: var(--input-color);
+  color: var(--text-color);
   border-radius: 50rem;
   font-size: 0.9rem;
   -webkit-appearance: none;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-input[name="fullName"] {
+/* input[name="fullName"] {
   background-image: url(../img/icons/person.svg);
 }
 
 input[name="address"] {
   background-image: url(../img/icons/location.svg);
-}
+} */
 
 .form-control:focus {
   outline: 0;
@@ -134,10 +175,15 @@ input[name="address"] {
   list-style: none;
 }
 
-.list-group li img {
+.list-group li svg {
   width: 40px;
+  height: 40px;
   min-width: 40px;
   margin-right: 0.5rem;
+}
+
+.list-group li svg .fill {
+  fill: var(--icons-color);
 }
 
 .list-group li label {
