--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 :root {
-  --dark: #181818;
-  --light: #f3f3f3;
+  --dark: #1f2229;
+  --light: #e5e5e6;
   --blue: #007bff;
   --dark-blue: #205084;
   --light-blue: #7db5f1;
@@ -20,26 +20,25 @@
   --label-border-color: #a8d2ff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --bg-color: var(--dark);
-    --txt-color: var(--light);
-    --header-bg-color: var(--dark);
-    --input-bg-color: #353535;
-    --input-bg-focus-color: #414141;
-    --input-border-color: var(--dark);
-    --input-focus-border-color: var(--dark-blue);
-    --icons-color: #ffffff;
-    --link-color: var(--light-blue);
-    --label-heading-color: var(--light-blue);
-    --btn-color: var(--dark-blue);
-    --btn-border-color: var(--dark-blue);
-    --label-border-color: var(--dark-blue);
-  }
+:root.theme-dark {
+  --bg-color: var(--dark);
+  --txt-color: var(--light);
+  --header-bg-color: var(--dark);
+  --input-bg-color: #2f3541;
+  /* --input-bg-color: #3a3f4d; */
+  --input-bg-focus-color: #3a3f4d;
+  --input-border-color: var(--dark);
+  --input-focus-border-color: var(--dark-blue);
+  --icons-color: var(--light);
+  --link-color: var(--light-blue);
+  --label-heading-color: var(--light-blue);
+  --btn-color: var(--dark-blue);
+  --btn-border-color: var(--dark-blue);
+  --label-border-color: var(--dark-blue);
+}
 
-  ::placeholder {
-    color: #919191;
-  }
+::placeholder {
+  color: #919191;
 }
 
 * {
@@ -54,6 +53,7 @@ body {
   overflow-x: hidden;
   color: var(--txt-color);
   background-color: var(--bg-color);
+  transition: background-color 0.15s ease-in-out;
 }
 
 small {
@@ -95,7 +95,7 @@ header h1 {
   display: none;
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 50px;
   height: 50px;
   -webkit-appearance: none;
@@ -148,13 +148,17 @@ footer {
   border-radius: 50rem;
   font-size: 0.9rem;
   -webkit-appearance: none;
-  transition: border-color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .form-control:focus {
   outline: 0;
   border: 1px solid var(--input-focus-border-color);
   background-color: var(--input-bg-focus-color);
+}
+
+.theme-light .form-control:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .send-btn {
@@ -168,7 +172,12 @@ footer {
   text-decoration: none;
   -webkit-appearance: none;
   font-size: 0.9rem;
-  transition: color .15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+button.send-btn:disabled {
+  opacity: 0.75;
+  cursor: not-allowed;
 }
 
 .send-btn:focus {
@@ -228,6 +237,26 @@ footer {
   font-weight: 600;
 }
 
+.alert {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  font-size: 0.9rem;
+}
+
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+.js .alert-js-disabled {
+  display: none;
+}
+
 .text-center {
   text-align: center !important;
 }
@@ -242,4 +271,72 @@ footer {
 
 .text-muted {
   color: #6c757d !important;
+}
+
+/* Theme switch */
+.theme-switch {
+  position: absolute;
+  top: 14px;
+  right: 10px;
+  display: none;
+  width: 50px;
+  height: 24px;
+}
+
+.js .theme-switch {
+  display: inline-block;
+}
+
+.theme-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.theme-switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+}
+
+.theme-switch .slider:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 0px;
+  bottom: 4px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  background: #ffffff;
+  transition: all 0.5s cubic-bezier(.23,1,.32,1) 0ms;
+  transform: translateX(1px);
+}
+
+.theme-switch input+.slider {
+  background: url('../img/icons/moon.svg') 6px center, url('../img/icons/sun.svg') 28px center;
+  background-color: #000000;
+  background-size: 17px;
+  background-repeat: no-repeat;
+}
+
+.theme-switch input:checked+.slider:before {
+  transform: translateX(27px);
+}
+
+.theme-switch input:focus+.slider:before {
+  box-shadow: 0px 0px 2px 3px var(--light-blue);
+}
+
+.theme-switch .slider.round {
+  border-radius: 34px;
+}
+
+.theme-switch .slider.round:before {
+  border-radius: 50%;
 }
