Disable all radio buttons on form submission
Send button is on bottom, making it easy to tap it by accident second
time after submission; therefore disable radio buttons (required fields)
to prevent such cases.

--- a/styles/main.css
+++ b/styles/main.css
@@ -345,3 +345,7 @@ button.send-btn:disabled {
 .theme-switch .slider.round:before {
   border-radius: 50%;
 }
+
+.d-none {
+  display: none !important;
+}
